# sql-grader-v1

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_gui.py
configs/: assignment.example.yaml  assignment.yaml  assignment_purchase_payment_ca3.yaml
configs/rubrics/: purchase_payment_ca3_rubric.csv
docs/: gui_usage.md
reports/: answer_driven_pipeline_verification.md  answer_schema_review.md  key_adequacy_grading.md  purchase_payment_grader_update.md
src/dbcheck/: __init__.py  config.py
src/dbcheck/cli/: compare_structure.py  export_results.py  main.py  score_results.py  snapshot.py  test_views.py
src/dbcheck/gui/: app.py
src/dbcheck/snapshot/: normalizer.py  reader.py  writer.py
src/dbcheck/sqlserver/: connection.py  introspection.py  restore.py  safety.py  test_data_loader.py
src/dbcheck/structure/: column_matcher.py  constraint_checker.py  structure_reporter.py  table_matcher.py  type_compatibility.py  (+1 more)
test_data/: BanHang.csv  ChiTietBanHang.csv  Hang.csv  KhachHang.csv  NhanVien.csv  Tien.csv
tests/integration/: test_sqlserver_snapshot.py  test_view_behavior.py
tests/unit/: test_advanced_normalizer.py  test_db_name_safety.py  test_exporter.py  test_fk_relationship.py  test_generic_behavior.py  test_gui.py  test_key_adequacy.py  test_name_normalizer.py  test_purchase_payment.py  test_restore_candidate_detection.py  test_restore_lifecycle.py  test_result_comparator.py  test_scoring.py  test_scoring_rubric.py  test_structure_fixes.py  test_summary.py  test_view_execution_mode.py  test_view_output_canonicalizer.py  test_view_rewrite.py
(+13 files in other folders)
